--- a/css/foundation-6.2.3/css/foundation.css
+++ b/css/foundation-6.2.3/css/foundation.css
@@ -3290,13 +3290,15 @@ table.hover tr:nth-of-type(even):hover {
     margin-right: 0.25rem; }
 
 .title-bar-left {
+  font-family: 'Open Sans', sans-serif;
   color: #000000;
-  font-size: 25px;
+  font-size: 21px;
   font-weight:800;
   padding: 20px 40px;
   float: left; }
 
 .title-bar-right {
+  font-family: 'Open Sans', sans-serif;
   padding: 10px 50px;
   color: #000000;
   float: right;
