--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
-<!--Sticky Fixed Nav bar-->
+body{
+	width: 100%;
+}
+/*Sticky Fixed Nav bar*/
 .title-bar{
 	position: fixed;
 	top: 0;
@@ -16,4 +19,17 @@
 .title-bar-right ul li{
 	display: inline-block;
 	padding: 20px;
+}
+
+/*Intro Section*/
+.intro{
+	font-family: 'Lora', serif;
+	margin: 100px 0 0 0;
+	text-align: center;
+	font-size: 30px;
+	font-weight:100;
+	background-color:  #FFED00;
+	width: 100%;
+	height: 500px;
+	padding: 140px 0 0 0;
 }
