--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,7 @@ body{
 }
 
 .foot h3:hover{
+	cursor: pointer;
 	color: #676000;
 }
 
@@ -108,4 +109,9 @@ body{
 	padding: 60px 0 0 0;
 	font-size: 15px;
 	font-family: 'Open Sans', sans-serif
+}
+
+.foot li:hover{
+	cursor:pointer;
+	color: #676000;
 }
