--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ body{
 /*Intro Section*/
 .intro{
 	font-family: 'Lora', serif;
-	margin: 100px 0 0 0;
+	margin: 0#!/usr/bin/env  0 0 0;
 	text-align: center;
 	font-size: 30px;
 	font-weight:100;
